force-app/main/default/objects/Opportunity/fields/Business_Segment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Business_Segment_Amount__c</fullName>
    <label>Business Segment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>