force-app/main/default/objects/Opportunity/fields/Business_Segment_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Business_Segment_Picklist__c</fullName>
    <label>Business Segment Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cement</fullName>
            </value>
            <value>
                <fullName>Foot &amp; Ankle</fullName>
            </value>
            <value>
                <fullName>Hips</fullName>
            </value>
            <value>
                <fullName>Knees</fullName>
            </value>
            <value>
                <fullName>Personalized Solutions</fullName>
            </value>
            <value>
                <fullName>Sports Med</fullName>
            </value>
            <value>
                <fullName>Surgical Products</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
            <value>
                <fullName>Spine</fullName>
            </value>
            <value>
                <fullName>CMF</fullName>
            </value>
            <value>
                <fullName>Thoracic</fullName>
            </value>
            <value>
                <fullName>SAT</fullName>
            </value>
            <value>
                <fullName>MyMobility</fullName>
            </value>
            <value>
                <fullName>Effecient Care</fullName>
            </value>
            <value>
                <fullName>Lower Extremities</fullName>
            </value>
            <value>
                <fullName>Upper Extremities</fullName>
            </value>
            <value>
                <fullName>Extremities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>