force-app/main/default/objects/Opportunity/fields/Buyer_Pipeline_Stage__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Pipeline_Stage__c</fullName>
    <label>Buyer Pipeline Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awareness</fullName>
            </value>
            <value>
                <fullName>Consideration</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Post-Purchase</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Re-Purchase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>