force-app/main/default/objects/Opportunity/fields/Call_Notes_CSD__c.field-meta.xml
<CustomField>
    <fullName>Call_Notes_CSD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Notes CSD</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>