force-app/main/default/objects/Opportunity/fields/CanadaDistributor__c.field-meta.xml
<CustomField>
    <fullName>CanadaDistributor__c</fullName>
    <description>This field is used on the Canada Sales Plans to specify the Distributor the Sales Plan is for</description>
    <label>Distributor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Compass</fullName>
            </value>
            <value>
                <fullName>McCarthy</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>ZBEAST</fullName>
            </value>
            <value>
                <fullName>ZBONE</fullName>
            </value>
            <value>
                <fullName>ZBOS</fullName>
            </value>
            <value>
                <fullName>ZBQUEBEC</fullName>
            </value>
            <value>
                <fullName>ZBWEST</fullName>
            </value>
            <value>
                <fullName>ZONE</fullName>
            </value>
            <value>
                <fullName>ZOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>