force-app/main/default/objects/Opportunity/fields/CAP_Approval__c.field-meta.xml
<CustomField>
    <fullName>CAP_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CAP Approval</label>
    <type>Checkbox</type>
</CustomField>