force-app/main/default/objects/Opportunity/fields/Capital_Amount__c.field-meta.xml
<CustomField>
    <fullName>Capital_Amount__c</fullName>
    <description>Surgical field to show the value of the capital products on an opportunity</description>
    <label>Capital Amount</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Amount_Categories__c</field>
        <operation>equals</operation>
        <value>Capital</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>