force-app/main/default/objects/Opportunity/fields/Capital_Funds_Budget__c.field-meta.xml
<CustomField>
    <fullName>Capital_Funds_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capital Funds/Budget</label>
    <type>Checkbox</type>
</CustomField>