force-app/main/default/objects/Opportunity/fields/Capital_Purchase_Type__c.field-meta.xml
<CustomField>
    <fullName>Capital_Purchase_Type__c</fullName>
    <label>Capital Purchase Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>DRA</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Placement</fullName>
            </value>
            <value>
                <fullName>Risk Sharing</fullName>
            </value>
            <value>
                <fullName>Internal Placement</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Monetized PPA</fullName>
                <isActive>false</isActive>
                <label>Monetized PPA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>