force-app/main/default/objects/Opportunity/fields/Capital_Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Capital_Revenue_Amount__c</fullName>
    <description>This is an auto-populated currency field based on the Capital Amount roll-up summary field.  This field is used for the Capital Revenue Forecast type for the Surgical group.</description>
    <label>Capital Revenue Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>