force-app/main/default/objects/Opportunity/fields/Capital_Services_and_Pricing_Approval__c.field-meta.xml
<CustomField>
    <fullName>Capital_Services_and_Pricing_Approval__c</fullName>
    <label>Capital Services and Pricing Approval</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accelero</fullName>
            </value>
            <value>
                <fullName>ROSA Knee</fullName>
            </value>
            <value>
                <fullName>mymobility</fullName>
            </value>
            <value>
                <fullName>Efficient Care</fullName>
            </value>
            <value>
                <fullName>Surgical- Power and Saw Blades</fullName>
            </value>
            <value>
                <fullName>Surgical- Tourniquet Systems &amp; Accessories</fullName>
            </value>
            <value>
                <fullName>Surgical- Pulsed Lavage</fullName>
            </value>
            <value>
                <fullName>Surgical- Fluid Waste Management</fullName>
            </value>
            <value>
                <fullName>Surgical- Endoscopy Platform</fullName>
            </value>
            <value>
                <fullName>Surgical- PPE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>