force-app/main/default/objects/Opportunity/fields/Capitated_Price_Package_Term__c.field-meta.xml
<CustomField>
    <fullName>Capitated_Price_Package_Term__c</fullName>
    <label>Capitated Price Package Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>