force-app/main/default/objects/Opportunity/fields/Capitated_Price_Package_Value__c.field-meta.xml
<CustomField>
    <fullName>Capitated_Price_Package_Value__c</fullName>
    <label>Capitated Price Package $ Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>