force-app/main/default/objects/Opportunity/fields/Care_Coord_Buy_In__c.field-meta.xml
<CustomField>
    <fullName>Care_Coord_Buy_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Care Coord. Buy-In</label>
    <type>Checkbox</type>
</CustomField>