force-app/main/default/objects/Opportunity/fields/Carevoyance__c.field-meta.xml
<CustomField>
    <fullName>Carevoyance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carevoyance</label>
    <type>Checkbox</type>
</CustomField>