force-app/main/default/objects/Opportunity/fields/Catch_Up_Length_Months__c.field-meta.xml
<CustomField>
    <fullName>Catch_Up_Length_Months__c</fullName>
    <description>Enter the Numbers of Months needed to Catch up</description>
    <label>Catch Up Length (# Months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>