force-app/main/default/objects/Opportunity/fields/Chair_support__c.field-meta.xml
<CustomField>
    <fullName>Chair_support__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chair support</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Chair support)</relationshipLabel>
    <relationshipName>Opportunities9</relationshipName>
    <type>Lookup</type>
</CustomField>