force-app/main/default/objects/Opportunity/fields/Check_Opportunity_Owner_is_changed__c.field-meta.xml
<CustomField>
    <fullName>Check_Opportunity_Owner_is_changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Opportunity Owner is changed</label>
    <type>Checkbox</type>
</CustomField>