force-app/main/default/objects/Opportunity/fields/Clinical_Champion_1__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Champion_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinical Champion</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Clinical Champion)</relationshipLabel>
    <relationshipName>OpportunitieswPlt</relationshipName>
    <type>Lookup</type>
</CustomField>