force-app/main/default/objects/Opportunity/fields/Clinical_Champion__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Champion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clinical Champion</label>
    <type>Checkbox</type>
</CustomField>