force-app/main/default/objects/Opportunity/fields/Clinical_Champion_Top_3_at_Yes__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Champion_Top_3_at_Yes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clinical Champion Top 3 at Yes</label>
    <type>Checkbox</type>
</CustomField>