force-app/main/default/objects/Opportunity/fields/Clinical_Champion_Web_Address__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Champion_Web_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Clinical Champion Web Address</label>
    <type>Url</type>
</CustomField>