force-app/main/default/objects/Opportunity/fields/Clinical_Contact_Notes__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Contact_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Clinical Contact Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>