force-app/main/default/objects/Opportunity/fields/Clinical_Driver_ID__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Driver_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinical Driver ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Clinical Driver ID)</relationshipLabel>
    <relationshipName>Opportunities8</relationshipName>
    <type>Lookup</type>
</CustomField>