force-app/main/default/objects/Opportunity/fields/Clinical_Validation__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clinical Validation</label>
    <type>Checkbox</type>
</CustomField>