force-app/main/default/objects/Opportunity/fields/Close_Date_and_Amount__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_and_Amount__c</fullName>
    <formula>TEXT(YEAR(CloseDate))
&amp;&quot;-&quot;&amp;
IF(
  MONTH(CloseDate) &lt; 10, 
  &quot;0&quot;&amp;TEXT(MONTH(CloseDate)), 
  TEXT(MONTH(CloseDate))
)
&amp;&quot;-&quot;&amp;
IF(
  DAY(CloseDate)&lt;10, 
  &quot;0&quot;&amp;TEXT(DAY(CloseDate)), 
  TEXT(DAY(CloseDate))
)
&amp;&quot; $&quot;&amp;
Text(Amount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date and Amount</label>
    <type>Text</type>
</CustomField>