force-app/main/default/objects/Opportunity/fields/Closed_Date_Interval__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date_Interval__c</fullName>
    <formula>CloseDate - Original_Close_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Date Interval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>