force-app/main/default/objects/Opportunity/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <description>The Closed reason indicates the reason for your win or loss.</description>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bad Fit</fullName>
            </value>
            <value>
                <fullName>Competitive Takeover</fullName>
            </value>
            <value>
                <fullName>Contract term barriers</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Error/Not Valid</fullName>
            </value>
            <value>
                <fullName>Instrumentation</fullName>
            </value>
            <value>
                <fullName>IT barriers</fullName>
            </value>
            <value>
                <fullName>Lack of administration commitment</fullName>
            </value>
            <value>
                <fullName>Marketing Issue</fullName>
            </value>
            <value>
                <fullName>No technology implementation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Price/contract</fullName>
            </value>
            <value>
                <fullName>Product performance</fullName>
            </value>
            <value>
                <fullName>Sales Issue</fullName>
            </value>
            <value>
                <fullName>Service – Inventory</fullName>
            </value>
            <value>
                <fullName>Service – Loanset</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
            <value>
                <fullName>Using an internal product</fullName>
            </value>
            <value>
                <fullName>Using competitor product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>