force-app/main/default/objects/Opportunity/fields/Closed_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Closed Reason Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>