force-app/main/default/objects/Opportunity/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>上司コメント</label>
    <type>TextArea</type>
</CustomField>