force-app/main/default/objects/Opportunity/fields/Commitment_Period__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Period__c</fullName>
    <label>Commitment Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>