force-app/main/default/objects/Opportunity/fields/Commitment_Products__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Products__c</fullName>
    <label>Commitment Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ALL</fullName>
            </value>
            <value>
                <fullName>BIOLOGICS</fullName>
            </value>
            <value>
                <fullName>CEMENT</fullName>
            </value>
            <value>
                <fullName>EXTREMETIES</fullName>
            </value>
            <value>
                <fullName>FOOT &amp; ANKLE</fullName>
            </value>
            <value>
                <fullName>HIP</fullName>
            </value>
            <value>
                <fullName>KNEES</fullName>
            </value>
            <value>
                <fullName>SPINE</fullName>
            </value>
            <value>
                <fullName>SPORTS MEDICINE</fullName>
            </value>
            <value>
                <fullName>SURGICAL</fullName>
            </value>
            <value>
                <fullName>TRAUMA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>