force-app/main/default/objects/Opportunity/fields/Committed_Consumable_Agreement_Include__c.field-meta.xml
<CustomField>
    <fullName>Committed_Consumable_Agreement_Include__c</fullName>
    <label>Committed Consumable Agreement Included</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>