force-app/main/default/objects/Opportunity/fields/Committed_Contract_Growth_Value__c.field-meta.xml
<CustomField>
    <fullName>Committed_Contract_Growth_Value__c</fullName>
    <formula>Term_of_Agreement_in_YRS__c * Total_Customer_Revenue_Annual_Growth_Opp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Committed Contract Growth Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>