force-app/main/default/objects/Opportunity/fields/Committed_PO_Date__c.field-meta.xml
<CustomField>
    <fullName>Committed_PO_Date__c</fullName>
    <description>MIS</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Read Only field driven from MIS Product Launch</inlineHelpText>
    <label>Committed PO Date</label>
    <type>Date</type>
</CustomField>