force-app/main/default/objects/Opportunity/fields/Committee_Status__c.field-meta.xml
<CustomField>
    <fullName>Committee_Status__c</fullName>
    <label>Committee Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Tabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>