force-app/main/default/objects/Opportunity/fields/Company_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Address__c</fullName>
    <formula>If( Opportunity_Record_Type__c = &quot;DN-CA-Opportunity&quot;,&quot;4555 Riverside Drive Palm Beach Gardens, FL 33410&quot;,

If(Opportunity_Record_Type__c  = &quot;DN-US-Opportunity&quot;, &quot;4555 Riverside Drive Palm Beach Gardens, FL 33410&quot;, null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Address</label>
    <type>Text</type>
</CustomField>