force-app/main/default/objects/Opportunity/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <formula>If( Opportunity_Record_Type__c = &quot;DN-CA-Opportunity&quot;,&quot;Zimmer Biomet Dental&quot;,

If(Opportunity_Record_Type__c  = &quot;DN-US-Opportunity&quot;, &quot;Zimmer Biomet Dental&quot;, null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Name</label>
    <type>Text</type>
</CustomField>