force-app/main/default/objects/Opportunity/fields/Competitive_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Contract_End_Date__c</fullName>
    <description>When does the competitive contract tied to this opportunity end</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Competitive Contract End Date</label>
    <type>Date</type>
</CustomField>