force-app/main/default/objects/Opportunity/fields/Competitive_Product_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Product_Quantity__c</fullName>
    <label>Competitive Product Quantity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>