force-app/main/default/objects/Opportunity/fields/Competitive_Units__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Units__c</fullName>
    <label>Competitive Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>