force-app/main/default/objects/Opportunity/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <inlineHelpText>This is the competitor you are going up against for this sales plan.</inlineHelpText>
    <label>Primary Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3di</fullName>
            </value>
            <value>
                <fullName>AAP</fullName>
            </value>
            <value>
                <fullName>Acumed</fullName>
            </value>
            <value>
                <fullName>Aecuaos</fullName>
            </value>
            <value>
                <fullName>Aesculap</fullName>
            </value>
            <value>
                <fullName>Ai-medic</fullName>
            </value>
            <value>
                <fullName>Alpha Consulting Group</fullName>
            </value>
            <value>
                <fullName>AMPLITUDE SAS</fullName>
            </value>
            <value>
                <fullName>AQ Implants</fullName>
            </value>
            <value>
                <fullName>Arthrex</fullName>
            </value>
            <value>
                <fullName>Arthrosurface</fullName>
            </value>
            <value>
                <fullName>ARTIQO</fullName>
            </value>
            <value>
                <fullName>Ascension</fullName>
            </value>
            <value>
                <fullName>Axomed</fullName>
            </value>
            <value>
                <fullName>B.Braun</fullName>
            </value>
            <value>
                <fullName>Brehm</fullName>
            </value>
            <value>
                <fullName>Conformis</fullName>
            </value>
            <value>
                <fullName>ConMed</fullName>
            </value>
            <value>
                <fullName>Corentec</fullName>
            </value>
            <value>
                <fullName>Corin</fullName>
            </value>
            <value>
                <fullName>Crossroads</fullName>
            </value>
            <value>
                <fullName>CrossRoads Medical</fullName>
            </value>
            <value>
                <fullName>DePuy</fullName>
            </value>
            <value>
                <fullName>DePuy Mitek</fullName>
            </value>
            <value>
                <fullName>DePuy Synthes</fullName>
            </value>
            <value>
                <fullName>DeSoutter</fullName>
            </value>
            <value>
                <fullName>DIZG</fullName>
            </value>
            <value>
                <fullName>DJO</fullName>
            </value>
            <value>
                <fullName>DJO Surgical</fullName>
            </value>
            <value>
                <fullName>Encore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>