force-app/main/default/objects/Opportunity/fields/Competitor_Product_s__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Product_s__c</fullName>
    <label>Competitor Product(s)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neptune 2</fullName>
            </value>
            <value>
                <fullName>Neptune 3</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>