force-app/main/default/objects/Opportunity/fields/Complete_Shipment_Risk__c.field-meta.xml
<CustomField>
    <fullName>Complete_Shipment_Risk__c</fullName>
    <label>Complete Shipment Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>