force-app/main/default/objects/Opportunity/fields/Completed_Competitive_Consumable_X_Ref__c.field-meta.xml
<CustomField>
    <fullName>Completed_Competitive_Consumable_X_Ref__c</fullName>
    <inlineHelpText>If applicable</inlineHelpText>
    <label>Completed Competitive Consumable X-Ref</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>