force-app/main/default/objects/Opportunity/fields/Confirm_Delivery_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Delivery_Instructions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Delivery Instructions</label>
    <type>Checkbox</type>
</CustomField>