force-app/main/default/objects/Opportunity/fields/Confirm_Delivery_Instructions_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Delivery_Instructions_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Confirm Delivery Instructions Date</label>
    <type>Date</type>
</CustomField>