force-app/main/default/objects/Opportunity/fields/Confirm_Ship_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Ship_to_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Ship to Address</label>
    <type>Checkbox</type>
</CustomField>