force-app/main/default/objects/Opportunity/fields/Confirm_Ship_to_Address_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Ship_to_Address_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Confirm Ship to Address Date</label>
    <type>Date</type>
</CustomField>