force-app/main/default/objects/Opportunity/fields/Confirm_Ship_to_Address_Formula__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Ship_to_Address_Formula__c</fullName>
    <formula>(CloseDate -  Confirm_Ship_to_Address_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confirm Ship to Address Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>