force-app/main/default/objects/Opportunity/fields/Confirm_Tax_Status__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Tax_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is Tax Status on form current? Confirm @ Tax.CustomerService@zimmerbiomet.com</inlineHelpText>
    <label>Confirm Tax Status</label>
    <type>Checkbox</type>
</CustomField>