force-app/main/default/objects/Opportunity/fields/Confirm_Tax_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Tax_Status_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Confirm Tax Status Date</label>
    <type>Date</type>
</CustomField>