force-app/main/default/objects/Opportunity/fields/Confirm_Tax_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Tax_Status_Formula__c</fullName>
    <formula>(CloseDate -  Confirm_Tax_Status_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confirm Tax Status Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>