force-app/main/default/objects/Opportunity/fields/Confirmed_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Delivery_Date__c</fullName>
    <description>Created for ZB Connect-ROSA</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Confirmed Delivery Date</label>
    <type>Date</type>
</CustomField>