force-app/main/default/objects/Opportunity/fields/Consignment_Cost__c.field-meta.xml
<CustomField>
    <fullName>Consignment_Cost__c</fullName>
    <description>Consignment_Cost</description>
    <label>Consignment Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>