force-app/main/default/objects/Opportunity/fields/Contract_Champion__c.field-meta.xml
<CustomField>
    <fullName>Contract_Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Champion</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Contract Champion)</relationshipLabel>
    <relationshipName>Opportunities6</relationshipName>
    <type>Lookup</type>
</CustomField>